src/snapshots/kk__tests__compiler__typecheck__progressive_unification_7.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let match = \(x, f) => x.f()

let arrayMap<From, To> = \(
  xs: Array<Element= From>,
  f: \From => To
): Array<Element= To> =>
  xs.match(
    \[] => []
    \[head, ..._] => [head.f()]
  )

let result: Array<Element= string> = [{x = 2}].arrayMap(\o => o.x)

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
   ┌─ tests/compiler/typecheck/progressive_unification_7.kk:12:38
   │
12 │ let result: Array<Element= string> = [{x = 2}].arrayMap(\o => o.x)
   │                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Type mismatch
   │
   = +---------------+-------------+
     | EXPECTED TYPE | ACTUAL TYPE |
     +---------------+-------------+
     |   Array<      |   Array<    |
     | -   string    | +   number  |
     |   >           |   >         |
     +---------------+-------------+
