src/snapshots/kk__tests__compiler__typecheck__record_type_3.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x = {
  x = 2,
  y = "hello",
}

let z = x.a

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_type_3.kk:6:11
  │
6 │ let z = x.a
  │           ^ No such property
  │
  = Available properties:
      x
      y
