src/snapshots/kk__tests__compiler__typecheck__record_type_4.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo = {
  x = 2,
  x = "hello"
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_type_4.kk:3:3
  │
3 │   x = "hello"
  │   ^ Duplicated record key
  │
  = This key is already declared before in this record. Consider removing or renaming it.
