src/snapshots/kk__tests__compiler__typecheck__record_type_5.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo: {
  x: number,
  y: number
} = {
  x = 1
}

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/record_type_5.kk:4:5
  │
4 │   } = {
  │ ╭─────^
5 │ │   x = 1
6 │ │ }
  │ ╰─^ Missing properties
  │
  = The missing properties are:
      y
