src/snapshots/kk__tests__compiler__typecheck__type_annotation_function_return_type_1.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f = \(x): number => true

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/type_annotation_function_return_type_1.kk:1:25
  │
1 │ let f = \(x): number => true
  │                         ^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - number      | + boolean   |
    +---------------+-------------+
