src/snapshots/kk__tests__compiler__typecheck__type_annotation_let_statement_1.kk.snap
---
source: src/main.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x: string = 2

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/type_annotation_let_statement_1.kk:1:17
  │
1 │ let x: string = 2
  │                 ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - string      | + number    |
    +---------------+-------------+
